--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -90,9 +90,16 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
+
+
 .benefits h3 {
     margin-bottom: 10px;
     text-align: center;
+    font-size: larger;
+}
+
+.benefits p {
+    font-size: 20px;
 }
 
 .benefits img {
@@ -133,5 +140,6 @@ p {
 }
 
 .content p {
-    font-size: normal;
+    font-size: 18px;
+    line-height: 1.25;
 }
