--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,11 +111,12 @@ p {
 
 /* set style for benefits container */
 .benefits {
+    display: inline;
     margin-right: 20px;
     padding: 20px;
     clear: both;
     float: right;
-    width: 20%;
+    width: 15%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
